data/derived/fa15/progs/unify/prog0363.ml.out
Characters 103-104:
  | Sine e	      -> sin(eval e)
                             ^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
